random things for first day of JS

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>This is a webpage</h1>
     <h2>this is a message</h2>
+
+    <button>button</button>
+    <button id="thing1" > button2</button>
+    <button id="thing2" > button3</button>
+    <button id="thing3" > button4</button>
+    
+</body>
 <script src="app.js" ></script>
 </html>
